# Agent0

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  render.yaml
.github/ISSUE_TEMPLATE/: rfc-template.md
.github/workflows/: agent1-ci-validation.yml  format.yml  lint.yml  pr-format-gate.yml  pr-lint-gate.yml  pr-post-release.yml  pr-test-gate.yml  pr-type-gate.yml  test.yml
docs/: CI-Failures.md  Capability.md  Configuration.md  Error-Codes.md  Quickstart.md  Self-Reflection.md
docs/Developer/: Architecture.md  Configuration.md  Contracts.md  Dashboard.md  Deployment.md  Error-Reporting.md  Executor.md  Modules.md  Pipeline.md  README.md  Reflector.md  Setup.md  Testing.md  Troubleshooting.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.js  api.ts  main.js  main.ts  style.css
scripts/: create_release.py
spec/: actions.md  architecture.md  daemon.md  executor.md  github-integration.md  security.md
src/agent0/: __init__.py  __main__.py  api.py  audit.py  config.py  daemon.py  errors.py  executor.py  logbuffer.py  main.py  poller.py  prompts.py  reflector.py  retry.py  router.py  utils.py  workspace.py
tests/: conftest.py  test_api.py  test_audit.py  test_config.py  test_daemon.py  test_errors.py  test_executor.py  test_logbuffer.py  test_poller.py  test_prompts.py  test_reflector.py  test_retry.py  test_router.py  test_utils.py  test_workspace.py
