[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent0"
version = "0.1.1"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.28.1",
    "fastapi==0.115.8",
    "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.3",
    "ruff==0.9.7",
    "mypy==1.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent0"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/agent0/prompts.py" = ["E501"]

[tool.mypy]
strict = true
python_version = "3.12"
explicit_package_bases = true
mypy_path = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
