[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent0"
version = "0.1.2"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.28.1",
    "fastapi==0.115.8",
    "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.3",
    "ruff==0.9.7",
    "pyright==1.1.398",
    "mypy==1.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent0"]

[tool.ruff]
target-version = "py312"
line-length = 99
exclude = [
  ".git",
  ".venv",
  "__pycache__",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "RUF",  # ruff-specific
]
ignore = [
  "E501",    # long strings in prompts
]

[tool.ruff.lint.isort]
known-first-party = ["agent0"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src/agent0"]
venvPath = "."
venv = ".venv"

[tool.mypy]
strict = true
python_version = "3.12"
explicit_package_bases = true
mypy_path = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
